--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "eu.tobiasheine.wearcontrol"
         minSdkVersion 19
-        targetSdkVersion 21
+        targetSdkVersion 20
         versionCode 1
         versionName "1.0"
     }
@@ -24,4 +24,5 @@ dependencies {
     wearApp project(':wear')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile project(':core')
 }
