--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -9,12 +9,12 @@ android {
         applicationId "eu.tobiasheine.wearcontrol"
         minSdkVersion 20
         targetSdkVersion 21
-        versionCode 3
+        versionCode 4
         versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
